2003-07-05  Martin Baulig  <martin@ximian.com>

	* test-197.cs: New test for bug #42973.

2003-06-29  Miguel de Icaza  <miguel@ximian.com>

	* makefile (TEST_SOURCES): Add the tests that require an assembly,
	so we dont get another regression here (#37521).

2003-05-27  Ravi Pratap  <ravi@ximian.com>

	* test-45.cs : Enable code which tests IntPtr array
	initialization. This automatically serves as a test case for bug
	#36030.

	Improve test.

2003-05-17  Ravi Pratap  <ravi@ximian.com>

	* test-194.cs: New test for bug #39108

	* README.tests : Update accordingly.

	* makefile : Add new test.

2003-05-19  Martin Baulig  <martin@ximian.com>

	* test-162.cs: Added testcases for structs containing other
	structs as fields.  Bug #42597.

2003-05-18  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added testcase for bug #41657.

2003-05-18  Martin Baulig  <martin@ximian.com>

	* test-154.cs: Added the contents of test-189.cs as a new testcase
	to this test.

	* test-189.cs: Removed, let's keep the flow analysis tests in one
	single test file.

2003-05-11  Martin Baulig  <martin@ximian.com>

	* test-193.cs: New test for bug #39828.

2003-04-10  Miguel de Icaza  <miguel@ximian.com>

	* test-43.cs: Improve test.

2003-04-06  Martin Baulig  <martin@ximian.com>

	* test-190.cs: New test.

2003-04-05  Martin Baulig  <martin@ximian.com>

	* test-189.cs: New test for bug #40670.

2003-04-02  Zoltan Varga  <vargaz@freemail.hu>

	* README.tests test-188.cs makefile: Added test-188.cs.

2003-02-25  Miguel de Icaza  <miguel@ximian.com>

	* makefile (all): Make it so that doing `make' will run the
	default tests depending on Windows/Linux.

2003-02-23  Martin Baulig  <martin@ximian.com>

	When adding any tests here, please do also add them to the
	README.tests !

	The following tests are still missing:

	test-176 test-177 test-179 test-180 test-181 test-182 test-183
	test-184

2003-02-23  Martin Baulig  <martin@ximian.com>

	* test-185.cs: New test for bug #37708.
