@@ -32,7 +32,7 @@ TEST_SOURCES = \
 	test-161 test-162 test-163 test-164 test-165 test-166 test-167 test-168 test-169 test-170 \
 		 test-172 test-173 test-174 test-175 test-176 test-177 	        test-179 test-180 \
 	test-181 test-182 test-183 test-184 test-185 test-186 test-187 test-188          test-190 \
-	test-191 test-192 test-193 test-194 test-195 
+	test-191 test-192 test-193 test-194 test-195          test-197 test-198 test-199
 
 
 DLL_SOURCES = \
